--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         </div>
     </div>
 </div>
-
+<p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, quae.
+</p>
 </body>
 
 </html>
